Add 'Troubleshooting' category sidebar

--- a/OneZero_website/src/css/custom.css
+++ b/OneZero_website/src/css/custom.css
@@ -28,3 +28,5 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&display=swap');
